// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllPlacements 1`] = `
<div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      top
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      bottom
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      left
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      right
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      top-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      top-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      bottom-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      bottom-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      left-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      left-end
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      right-start
    </span>
  </div>
  <div
    class="mb-6"
  >
    <span
      class="cursor-pointer"
      tabindex="0"
    >
      right-end
    </span>
  </div>
</div>
`;

exports[`Story Snapshots > CloseDelay 1`] = `
<div>
  <span
    class="cursor-pointer"
    tabindex="0"
  >
    3000 ms close delay
  </span>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <span
    class="cursor-pointer"
    tabindex="0"
  >
    hover me
  </span>
</div>
`;

exports[`Story Snapshots > DefaultOpen 1`] = `
<div>
  <span
    aria-describedby=":r10:"
    class="cursor-pointer"
    tabindex="0"
  >
    hover me
  </span>
</div>
`;

exports[`Story Snapshots > Delay 1`] = `
<div>
  <span
    class="cursor-pointer"
    tabindex="0"
  >
    1000 ms delay
  </span>
</div>
`;

exports[`Story Snapshots > TooltipInTooltip 1`] = `
<div>
  <span
    class="cursor-pointer"
    tabindex="0"
  >
    hover me
  </span>
</div>
`;
